--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.5",
+    "@clerk/nextjs": "^6.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "openai": "^4.68.4",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
